--- a/builder-app/package.json
+++ b/builder-app/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.0.2",
     "@builder.io/dev-tools": "^1.6.3",
     "@builder.io/react": "^8.0.9",
     "@builder.io/sdk": "^6.0.4",
+    "@clerk/nextjs": "^6.12.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
